Fix data behind Herta

--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,7 @@ body {
     color: #fff;
     position: absolute;
     text-align: center;
+    z-index: 10;
     top: 30px;
 }
 
